cititechdNew2024Jan/force-app/main/default/objects/CalloutData__c/CalloutData__c.object-meta.xml
<CustomObject>
    <label>CalloutData</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CalloutData</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>