cititechdNew2024Jan/force-app/main/default/objects/CalloutData__c/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>AccountId</label>
    <length>200</length>
    <type>Text</type>
</CustomField>