cititechdNew2024Jan/force-app/main/default/objects/CalloutData__c/fields/AuthenticationURL__c.field-meta.xml
<CustomField>
    <fullName>AuthenticationURL__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>AuthenticationURL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>