cititechdNew2024Jan/force-app/main/default/objects/CalloutData__c/fields/EndPointURL__c.field-meta.xml
<CustomField>
    <fullName>EndPointURL__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>EndPointURL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>